@startuml
'https://plantuml.com/class-diagram

'hide empty member
skinparam dpi 300
skinparam linetype ortho
'skinparam linetype polyline
'left to right direction

abstract class NetPacket {
    # header
    # payload
    # parsePayload()
    + parsePacket()
}

class EtherPacket extends NetPacket {
    + source
    + destination
    + type
}
class Ip6Packet extends NetPacket {
    + source
    + destination
    + version
    + trafficClass
    + flowLabel
    + payloadLength
    + nextHeader
    + hopLimit
}
class UdpPacket extends NetPacket {
    + SourcePort
    + DestinationPort
    + Length
    + Checksum
}
class Icmp6Packet extends NetPacket {
    + type
    + code
    + checksum
}
abstract class NdpPacket extends NetPacket {
    # options
    # parseOptions()
    # WriteOptions()
}
class EchoReplyPacket extends NetPacket {
    + identifier
    + sequenceNumber
    + data
}
class EchoRequestPacket extends NetPacket {
    + identifier
    + sequenceNumber
    + data
}
class DestinationUnreachablePacket extends NetPacket
class TimeExceededPacket extends NetPacket
class ParameterProblemPacket extends NetPacket
class PacketTooBigPacket extends NetPacket

EtherPacket o-- Ip6Packet
Ip6Packet o-- Icmp6Packet
Ip6Packet o-- UdpPacket
Icmp6Packet o-- EchoReplyPacket
Icmp6Packet o-- EchoRequestPacket
Icmp6Packet o-- DestinationUnreachablePacket
Icmp6Packet o-- TimeExceededPacket
Icmp6Packet o-- ParameterProblemPacket
Icmp6Packet o-- PacketTooBigPacket
Icmp6Packet o-- NdpPacket

class NeighborSolicitationPacket extends NdpPacket {
    + targetAddress
}

class NeighborAdvertisementPacket extends NdpPacket {
    + router
    + solicited
    + override
    + targetAddress
}

class RouterSolicitationPacket extends NdpPacket

class RouterAdvertisementPacket extends NdpPacket {
    + curHopLimit
    + managedAddressConfiguration
    + otherConfiguration
    + routerLifetime
    + reachableTime
    + retransmitTimer
}


@enduml